--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/okro_soup.html">Okro soup</a>
+    <a href="banga_soup.html">Banga soup</a>
+    <a href="boiled_corn_ube">Boiled corn with Ube</a>
 </body>
 </html>
