--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/okro_soup.html">Okro soup</a>
-    <a href="banga_soup.html">Banga soup</a>
-    <a href="boiled_corn_ube">Boiled corn with Ube</a>
+    <ul>
+        <li><a href="recipes/okro_soup.html">Okro soup</a></li>
+        <li><a href="banga_soup.html">Banga soup</a></li>
+        <li><a href="boiled_corn_ube">Boiled corn with Ube</a></li>
+    </ul>
 </body>
 </html>
