--- a/recipes/banga_soup.html
+++ b/recipes/banga_soup.html
@@ -9,10 +9,34 @@
     <a href="index.html">Home</a>
     <h1>Banga soup</h1>
     <!--A free image of the finished dish under the h1 heading that you added earlier. -->
-    
+    <img alt="banga soup" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fallnigerianfoods.com%2Fbanga-stew%2F&psig=AOvVaw26bgcL4OE-t3IX5EreuEHr&ust=1761705697066000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIifxqvvxZADFQAAAAAdAAAAABAE">
     <!-- Under the image, it should have an appropriately sized “Description” heading followed by a paragraph or two describing the recipe. -->
+    <h2>Description</h2>
+    <p>Banga soup, is a soup eaten by the Urhobo people of Southern Nigeria. It is made by extracting the liquid of palm kernels. Thereafter, other ingredients like crayfish, meat, fish, pepper and cow tripe are added. It is eaten with eba or usi (starch)</p>
     <!-- Under the description, add an “Ingredients” heading followed by an unordered list of the ingredients needed for the recipe. -->
+    <h2>Ingredients</h2>
+    <ul>
+        <li>fresh palmnuts</li>
+        <li>palmoil</li>
+        <li>pepper</li>
+        <li>salt</li>
+        <li>seasoning</li>
+        <li>meat</li>
+        <li>fish</li>
+        <li>water</li>
+    </ul>
     <!-- Finally, under the ingredients list, add a “Steps” heading followed by an ordered list of the steps needed for making the dish. -->
-    
+    <h2>Steps</h2>
+     <ol>
+        <li>wash palmnuts</li>
+        <li>boil  in moderate quantity of water till very soft</li>
+        <li>allow to cool</li>
+        <li>mash cooked palmnuts into a pulp</li>
+        <li>sieve out the juice</li>
+        <li> boil juice with meat and fish</li>
+        <li>add seasoning</li>
+        <li>add salt</li>
+        <li>allow to cool, serve with your favourite swallow/li>
+     </ol>
 </body>
 </html>
