Index path corrected

--- a/recipes/banga_soup.html
+++ b/recipes/banga_soup.html
@@ -6,7 +6,7 @@
     <title>Banga soup</title>
 </head>
 <body>
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
     <h1>Banga soup</h1>
     <!--A free image of the finished dish under the h1 heading that you added earlier. -->
     <img alt="banga soup" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fallnigerianfoods.com%2Fbanga-stew%2F&psig=AOvVaw26bgcL4OE-t3IX5EreuEHr&ust=1761705697066000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIifxqvvxZADFQAAAAAdAAAAABAE">
