--- a/recipes/okro_soup.html
+++ b/recipes/okro_soup.html
@@ -6,7 +6,7 @@
     <title>Okro Soup</title>
 </head>
 <body>
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
     <h1>Okro Soup</h1>
     <!--A free image of the finished dish under the h1 heading that you added earlier. -->
     <img alt="okro soup" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FDraw_soup&psig=AOvVaw36rTf9CkNNVxH1w68ZWIpf&ust=1761612885525000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPD1nciVw5ADFQAAAAAdAAAAABAE">
