--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/okro_soup.html">Okro soup</a></li>
-        <li><a href="banga_soup.html">Banga soup</a></li>
-        <li><a href="boiled_corn_ube">Boiled corn with Ube</a></li>
+        <li><a href="recipes/banga_soup.html">Banga soup</a></li>
+        <li><a href="recipes/boiled_corn_ube">Boiled corn with Ube</a></li>
     </ul>
 </body>
 </html>
