--- a/recipes/boiled_corn_ube.html
+++ b/recipes/boiled_corn_ube.html
@@ -9,7 +9,7 @@
     <a href="../index.html">Home</a>
     <h1>Boiled corn with Ube</h1>
     <!--A free image of the finished dish under the h1 heading that you added earlier. -->
-    <img alt="boiled corn" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fglobalfoodbook.com%2Frecipes%2Fsweet-corn-with-african-pear-oka-na-ube&psig=AOvVaw15td4mazA3tljXNGTOWKw6&ust=1761706410345000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLDD1YXyxZADFQAAAAAdAAAAABAE">
+    <img alt="boiled corn" src="https://img-global.cpcdn.com/recipes/45605160c62fcfa4/600x852cq80/corn-african-pear-ube-na-oka-recipe-main-photo.webp">
     <!-- Under the image, it should have an appropriately sized “Description” heading followed by a paragraph or two describing the recipe. -->
      <h2>Description</h2>
      <p>soft boiled maize , with steamed African pear</p>
